# converter

./: Cargo.toml  README.md  config.toml  converter.py
converter/: config.toml  timeit.bat
converter/main/: Cargo.toml
converter/main/src/: main.rs
converter/shared/src/drivers/: config.rs  dialog.rs  elements.rs  werth.rs
converter/werth/src/: lib.rs
main/src/: config_test.rs  main.rs
shared/: Cargo.toml
shared/src/: hash_map_wrapper.rs  lib.rs
shared/src/drivers/: config.rs  container.rs  elements.rs  mod.rs  zeiss.rs
test_data/results/: 00469339-Gate_815_chr.txt  test1_chr.txt  test_fet.txt  test_hdr.txt
test_data/test/: dialog.json
werth/: Cargo.toml
zeiss/: Cargo.toml
zeiss/src/: lib.rs  zeiss_test.rs
