[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
shared.workspace = true
zeiss = { path = "../zeiss" }
werth = { path = "../werth" }